--- a/Styles/blog.css
+++ b/Styles/blog.css
@@ -129,13 +129,13 @@ a{
     margin-right: 20px;
     padding: 15px;
     text-align: center;
-    background-image: linear-gradient(skyblue, white);
+    background-image: linear-gradient(rgb(216, 240, 250), white);
 }
 .komola{
-    background-image: linear-gradient(orange, white);
+    background-image: linear-gradient( rgb(249, 228, 190), white);
 }
 .beguni{
-    background-image: linear-gradient(violet, white);
+    background-image: linear-gradient(rgb(203, 206, 248), white);
 }
 .right, .left{
     background-color: orange;
@@ -156,11 +156,14 @@ a{
         margin-right: 0;
         margin-bottom: 15px;
     }
+    .img2{
+        width: 100%;
+    }
 }
 
 
 .stories{
-    background-image: url(/Images/bg.png);
+    background-image: linear-gradient(#ffffff #f7c570), url(/Images/bg.png);
 }
 .fun{
     border: 1px solid rgb(234, 230, 230);
@@ -183,9 +186,15 @@ a{
     color: white;
     background-color: blue;
     padding: 8px;
+    position: relative;
+    top: -20px;
 }
 .view{
     text-align: center;
+    margin-top: 30px;
+}
+.nov{
+    padding: 15px;
 }
 
 @media screen and (max-width:576px) {
